--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,11 @@
     <string name="EditBillDate">Enter Bill Date</string>
     <string name="EditBillNextButton">SAVE</string>
 
+    <string name="tab_home">Bills</string>
+    <string name="tab_details">Add/ Edit bill</string>
+    <string name="tab_camera">Capture bill</string>
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_home">HomeActivity</string>
